# pico-rs

./: .gitignore  APACHE2.0  Cargo.toml  Embed.toml  Kconfig.rpi_pico  MIT  README.md  build.rs  justfile  memory.x  rust-toolchain.toml  west.yml
.cargo/: config.toml
app/: sample.yaml
app/src/: main.c
apps/blinky/: Cargo.toml
apps/blinky/src/: main.rs
async/: Cargo.toml  build.rs
board/: Cargo.toml
board/rp-pico/: Cargo.toml  justfile
board/src/: lib.rs
classic/: Cargo.toml  build.rs  justfile
hello-world/: CMakeLists.txt  Cargo.toml  prj.conf
hello-world/src/: lib.rs  main.c
pico-rs/: Cargo.toml  build.rs  justfile
src/: main.rs
