[package]
name = "pico-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
cortex-m-rt = { version = "0.7.5" }
defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.1.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

[profile.release]
debug = 2
