[workspace]
members = ["async"]

resolver = "3"

[workspace.dependencies]
cortex-m-rt = { version = "0.7.5" }
defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.1.0" }
panic-probe = { version = "1.0.0" }

embassy-executor = { version = "0.9.1" }
embassy-rp = { version = "0.9.0" }
embassy-time = { version = "0.5.0" }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

[profile.release]
debug = 2
