[workspace]
members = ["async", "board/rp-pico"]

resolver = "3"

[workspace.dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.5" }
defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.1.0" }
embedded-hal = { version = "1.0.0" }
panic-probe = { version = "1.0.0" }
rp2040-boot2 = { version = "0.3.0" }
rp2040-hal = { version = "0.11.0" }
static_cell = { version = "2.1.1" }
portable-atomic = { version = "1.12.0" }

embassy-executor = { version = "0.9.1" }
embassy-rp = { version = "0.9.0" }
embassy-time = { version = "0.5.0" }

cyw43 = { version = "0.6.0" }
cyw43-pio = { version = "0.9.0" }

rp-pico = { path = "board/rp-pico" }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

cyw43 = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

[profile.release]
debug = 2
