[package]
name = "classic"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
defmt-rtt = { workspace = true }
embedded-hal = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
rp-pico = { workspace = true }
